--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					Qian, I have fallen in love with you for
+					Kexing yao, we have known each other
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
-					Love u forever and ever.<br/>
-					<div class="signature">- Qingcai Cui | Germey</div>
+					Just give me more opportunities to know you and show myself.<br/>
+					<div class="signature">- Xinci Zong</div>
 				</div>
 			</div>
 		</div>
