--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
-					Just give me more opportunities to know you and show myself.<br/>
+					Give me more opportunities to know you and show me.<br/>
 					<div class="signature">- Xinci Zong</div>
 				</div>
 			</div>
