--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
-					More chances to know you and show me.<br/>
-					<div class="signature">- Xinci Zong</div>
+					Just  more chances to know you and show me. <br/>
+					<div class="signature">- Xinci Zong </div>
 				</div>
 			</div>
 		</div>
