--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>Our Love Story</title>
+	<title>Invitation card from Xingci</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<style type="text/css">
@@ -27,7 +27,7 @@
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					Kexing yao, we have known each other
+					Kexin Yao, we have known each other
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
@@ -46,7 +46,7 @@
 	var offsetY = $("#loveHeart").height() / 2 - 55;
 	var together = new Date();
 	// 此处月份介于 0 ~ 11 之间。用本地时间表示，如 8 月要用 7 表示。
-	together.setFullYear(2018, 10, 5);
+	together.setFullYear(2025, 4, 31);
 	together.setHours(15);
 	together.setMinutes(0);
 	together.setSeconds(0);
