Update greeting and signature in index.html

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					Kexin Yao, we have known each other
+					Hi, Kexin Yao, we have known each other
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
-					 Give me more chances to know you <br/>
-					<div class="signature">- Xinci Zong </div>
+					Just more chances to know you, Sincerely <br/>
+					<div class="signature"> Xinci Zong | </div>
 				</div>
 			</div>
 		</div>
