--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
-					Just more chances to know you, Sincerely <br/>
+					I sincerely beg more chances to know you <br/>
 					<div class="signature"> Xinci Zong | </div>
 				</div>
 			</div>
