Remove trailing pipe in signature

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				</div>
 				<div id="loveu">
 					I sincerely beg more chances to know you <br/>
-					<div class="signature"> Xinci Zong | </div>
+					<div class="signature"> Xinci Zong</div>
 				</div>
 			</div>
 		</div>
