--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</div>
 	</div>
 	<div id="copyright">
-		Copyright © 2025 <a href='https://zongdaoming.github.io/#blog'>zongdaoming.github.io</a> 2025-2028
+		Copyright © 2025 <a href='https://zongxingci.github.io/'>zongxingci.github.io</a> 2025-2028
 	</div>
 </div>
 <script type="text/javascript">
