--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
-					I sincerely beg more chances to know you <br/>
-					<div class="signature"> Xinci Zong</div>
+					I beg more chances to know you <br/>
+					<div class="signature"> Sincerely, Xinci Zong </div>
 				</div>
 			</div>
 		</div>
