--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
 <div id="mainDiv">
 	<div id="content">
 		<div id="code">
+			<span class="comments">##</span><br/>			
+			i = Boy(<span class="string">"Xingci Zong"</span>);<br/>
+			<span class="comments"># Hi, girl! Please let </span><br/>
+			i.introduce(me)<br/>
+			<span class="comments"># 我是一名算法工程师,</span><br/>
+			<span class="comments"># 我写代码为了养活自己和自己爱的人，我多工作一天，我希望我爱的人能少工作一天。</span><br/>
 			<span class="comments">##</span><br/>
-			<span class="comments"># I am a programmer, This is a test case !!! </span><br/>
 		</div>
 		<div id="loveHeart">
 			<canvas id="garden"></canvas>
