Fix typo in loveHeart comment for clarity

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<span class="comments"># Hi, girl! Please let </span><br/>
 			i.introduce(me)<br/>
 			<span class="comments"># 我是一名算法工程师,</span><br/>
-			<span class="comments"># 我写代码为了养活自己和自己爱的人，我多工作一天，我希望我爱的人能少工作一天。</span><br/>
+			<span class="comments"># 我写代码为了养活自己和自己爱的人，我多工作一天，我所爱的人便能少工作一天。</span><br/>
 			<span class="comments">##</span><br/>
 		</div>
 		<div id="loveHeart">
