--- a/index.html
+++ b/index.html
@@ -21,11 +21,26 @@
 	<div id="content">
 		<div id="code">
 			<span class="comments">##</span><br/>			
-			i = Boy(<span class="string">"Xingci Zong"</span>);<br/>
+			i = Boy(<span class="string">"Xingci Zong"</span>)<br/>
 			<span class="comments"># Hi, girl! Please let </span><br/>
 			i.introduce(me)<br/>
-			<span class="comments"># 我是一名算法工程师,</span><br/>
-			<span class="comments"># 我写代码为了养活自己和自己爱的人，我多工作一天，我所爱的人便能少工作一天。</span><br/>
+			<span class="comments"># 我是一名算法工程师,其实就是程序员（手动🐶）</span><br/>
+			<span class="comments"># 我写代码为了养活自己和自己爱的人，我所在的单位工作强度很大，但是我多工作一天，我所爱的人便能少工作一天。</span><br/>
+			<span class="comments"># 我是一个稍微自律的家伙，这一点从我博士毕业后的体重变化可以看出：</span><br/>
+			(<span class="string">weight&:</span> 75kg to 69kg) <br/>
+			<span class="comments"># 我喜欢新的东西，对我而言有挑战性的东西，也愿意花时间去学，并且乐在其中，这从我工作之后丰富了不少专业技能包可以看出</span><br/>
+			tools.add(<span class="string">scala</span>, <span class="string">java</span>, <span class="string">hive sql</span>, pr(learning...)) <br/>	
+			<span class="comments"># 我性格上的缺点是有点犟和偏执。但是我真的听人劝。人常言，性格是很难改变的，这一点确实如此，但是汲取别人正确的观点，走出自己的舒适区，我认为很重要。</span><br/>
+			<span class="comments"># 我虽然是一个理科生，但是我小的时候喜欢看文学书，侦探类的书，红楼梦和福尔摩斯都陪我消磨了很长的童年时光，但小镇学理才是一个小镇做题家的出路，而且我数学确实还行</span><br/>
+			<span class="comments"># Hi Kexin姑娘，我对你映像深刻。</span><br/> 
+			<span class="comments"># 如果你对你的另一半颜值要求比较高，那我确实不太适合（除非时光倒流，让我回到大学那会儿）</span><br/> 
+			<span class="comments"># 如果不是，我沟通技巧的欠缺，可能让你对我有误解，我从聊天中对你有所了解，觉得你很好，我觉得这当中应该没有滤镜。我喜欢一个懂技术的女生👸</span><br/> 
+			<span class="comments"># 并不是我比你年纪大，我就比你懂得多（我未不这么认为），这是陈词滥调，迂腐的思想。我想了解你，只是单纯的想了解一下姑娘，我是认真的。</span><br/> 
+			<span class="comments"># 年纪越大懂得越多么？年纪越大越正确么？并非如此，知世故而不世故才是好的。保持一颗初心，积极看待世界。逆风的方向最适合飞翔，这是我很喜欢的一句话的心境。</span><br/> 
+			<span class="comments"># 如果我再年轻一些，我的热情会更加洋溢些。但是社会和现实让我不得不做一个理智人。</span><br/> 
+			<span class="comments"># 关于我以前的感情经历，我并不是一个滥情的家伙，到目前29岁为止只有两段恋爱史。</span><br/>
+			<span class="comments"># 请给我一些了解你的机会，毕竟我们都没怎么正式认识不是么？</span><br/>
+			ps: 我不是大叔，i am <span class="keyword">young boy</span>,<span class="keyword">really young</span>
 			<span class="comments">##</span><br/>
 		</div>
 		<div id="loveHeart">
