--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<span class="comments"># 我喜欢新的东西，对我而言有挑战性的东西，也愿意花时间去学，并且乐在其中，这从我工作之后丰富了不少专业技能包可以看出</span><br/>
 			tools.add(<span class="string">scala</span>, <span class="string">java</span>, <span class="string">hive sql</span>, pr(learning...)) <br/>	
 			<span class="comments"># 我性格上的缺点是有点犟和偏执。但是我真的听人劝。人常言，性格是很难改变的，这一点确实如此，但是汲取别人正确的观点，走出自己的舒适区，我认为很重要。</span><br/>
-			<span class="comments"># 我虽然是一个理科生，但是我小的时候喜欢看文学书，侦探类的书，红楼梦和福尔摩斯都陪我消磨了很长的童年时光，但小镇学理才是一个小镇做题家的出路，而且我数学确实还行</span><br/>
+			<span class="comments"># 我虽然是一个理科生，但是我小的时候喜欢看文学书，侦探类的书，红楼梦和福尔摩斯都陪我消磨了很长的童年时光，但小镇学理才是一个小镇做题家的出路，而且我数学确实还行。</span><br/>
 			<span class="comments"># Hi Kexin姑娘，我对你映像深刻。</span><br/> 
 			<span class="comments"># 如果你对你的另一半颜值要求比较高，那我确实不太适合（除非时光倒流，让我回到大学那会儿）</span><br/> 
 			<span class="comments"># 如果不是，我沟通技巧的欠缺，可能让你对我有误解，我从聊天中对你有所了解，觉得你很好，我觉得这当中应该没有滤镜。我喜欢一个懂技术的女生👸</span><br/> 
