Remove redundant 'boy' in young keyword for clarity

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<span class="comments"># 如果我再年轻一些，我的热情会更加洋溢些。但是社会和现实让我不得不做一个理智人。</span><br/> 
 			<span class="comments"># 关于我以前的感情经历，我并不是一个滥情的家伙，到目前29岁为止只有两段恋爱史。</span><br/>
 			<span class="comments"># 请给我一些了解你的机会，毕竟我们都没怎么正式认识不是么？</span><br/>
-			ps: 我不是大叔，i am <span class="keyword">young boy</span>,<span class="keyword">really young</span>
+			ps: 我不是大叔，i am <span class="keyword">young</span>,<span class="keyword">really young</span>
 			<span class="comments">##</span><br/>
 		</div>
 		<div id="loveHeart">
