Update personal intro message for better connection

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					i.say(<span class="string">"I'm young, really young!"</span>);<br/>
 					<br/>
 				} catch (HeartNotReadyException e) {<br/>
-					i.say(<span class="string">"让我们从hello world开始..."</span>);<br/>
+					i.say(<span class="string">"让我们从一顿晚饭开始认识..."</span>);<br/>
 				}<br/>
 				<span class="comments">/** End of Introduction */</span><br/>
 			</div>
