--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<span class="comments"> * @brief 一个真诚的程序员自我介绍</span><br/>
 				<span class="comments"> * @author Xingci Zong</span><br/>
 				<span class="comments"> */</span><br/>
-				Boy i(<span class="string">"Xingci Zong"</span>);<br/>
+				i = Boy(<span class="string">"Xingci Zong"</span>);<br/>
 				<br/>
 				<span class="comments">// 职业身份声明</span><br/>
 				i.role = AlgorithmEngineer::getInstance(); <span class="comments">// 本质是一个young boy</span><br/>
