Adjust loveHeart offsets for better positioning

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 	</div>
 </div>
 <script type="text/javascript">
-	var offsetX = $("#loveHeart").width() / 2;
-	var offsetY = $("#loveHeart").height() / 2 - 55;
+	var offsetX = $("#loveHeart").width() -55;
+	var offsetY = $("#loveHeart").height() / 2;
 	var together = new Date();
 	// 此处月份介于 0 ~ 11 之间。用本地时间表示，如 8 月要用 7 表示。
 	together.setFullYear(2025, 4, 31);
