(Expand loveHeart dimensions and enhance personal intro comments)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 <div id="mainDiv">
 	<div id="content">
 		<div id="code">
-			<span class="comments">##</span><br/>			
+			<span class="comments">/**</span><br/>
+        	<span class="comments"> * @brief 一个真诚的程序员自我介绍</span><br/>	
 			i = Boy(<span class="string">"Xingci Zong"</span>)<br/>
 			<span class="comments"># Hi, girl! Please let </span><br/>
 			i.introduce(me)<br/>
