--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
 					<span class="comments"> * </span><br/>
 					<span class="comments"> * 若说技术是我们的共同语言，</span><br/>
 					<span class="comments"> * 那么真诚就是我最好的编译器。</span><br/>
-					<span class="comments"> * 年纪越大懂得越多么？年纪越大越正确么？并非如此，知世故而不世故才是好的。</span><br/>
-					<span class="comments"> * 保持一颗初心，积极看待世界。逆风的方向最适合飞翔。</span><br/>
+					<span class="comments"> * 年纪越大懂得越多么？年纪越大越正确么？</span><br/>
+					<span class="comments"> * 我认为并非如此，知世故而不世故才是好的。</span><br/>
+					<span class="comments"> * 保持一颗初心，积极看待世界。</span><br/>
 					<span class="comments"> */</span><br/>
 					<br/>
 					if (!kexin.requires(<span class="string">"高颜值"</span>)) {<br/>
