--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					Girl kexin = i.getCrush();<br/>
 					<span class="comments">/* </span><br/>
 					<span class="comments"> * 你不是我代码中的偶然异常，</span><br/>
-					<span class="comments"> * 而是我精心设计的人生算法中，</span><br/>
+					<span class="comments"> * 而是我人生算法中，</span><br/>
 					<span class="comments"> * 那个期待已久的最优解。</span><br/>
 					<span class="comments"> * </span><br/>
 					<span class="comments"> * 若说技术是我们的共同语言，</span><br/>
