--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<span class="string">"我会用一生的commit来回应。"</span>);<br/>
 					}<br/>
 					<br/>
-					<span class="comments">// 感情经历</span><br/>
+					<span class="comments">// 感情经历(我不是一个滥情的家伙)</span><br/>
 					i.relationshipHistory = Vector(<br/>
 						Relationship(<span class="string">"初恋"</span>, _),<br/>
 						Relationship(<span class="string">"前任"</span>, _)<br/>
