--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         	<span class="comments"> */</span><br/>
         	i = Boy(<span class="string">"Xingci Zong"</span>);<br/>
 			<span class="comments">// 职业身份声明</span><br/>
-			i.role = AlgorithmEngineer::getInstance(); <span class="comments">// 本质是严选打工人</span><br/>
-			<span class="comments"># 我写代码为了养活自己和自己爱的人，我所在的单位工作强度很大，但是我多工作一天，我所爱的人便能少工作一天。</span><br/>
+			i.role = AlgorithmEngineer::getInstance(); <span class="comments">// 本质是严选打工人</span><br/><br/>
 			<span class="comments">// 工作信条：多工作一天，所爱之人便能少工作一天</span><br/>
 			<span class="comments">// 个人特质</span><br/>
         	i.setTrait(<span class="string">"自律"</span>).evidence(<span class="string">"体重曲线"</span>, 75kg >> 69kg);<br/>
