--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				</div>
 				<div id="loveu">
 					I beg more chances to know you <br/>
-					<div class="signature"> Sincerely, Xinci Zong </div>
+					<div class="signature"> Sincerely, Xingci Zong </div>
 				</div>
 			</div>
 		</div>
