--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 <div id="mainDiv">
 	<div id="content">
 		<div id="code">
-			<span class="comments">/**</span><br/>
+			<span class="comments"><span class="string">落魄谷中寒风吹，春秋蝉鸣少年归。</span></span><br/>
+			<!-- <span class="comments">/**</span><br/>
         	<span class="comments"> * @brief 一个真诚的程序员自我介绍</span><br/>	
         	<span class="comments"> * @author Xingci Zong</span><br/>
         	<span class="comments"> */</span><br/>
@@ -74,7 +75,7 @@
 				}<br/>
 				<span class="comments"># </span><br/>
 				ps: 我不是大叔，i am a <span class="keyword">young boy</span>,<span class="keyword">really young</span><br/>
-				<span class="comments">/** End of Introduction */</span><br/>
+				<span class="comments">/** End of Introduction */</span><br/> -->
 		</div>
 		<div id="loveHeart">
 			<canvas id="garden"></canvas>
