--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 			</div>
 		</div>
 	</div>
-	<!-- <div id="copyright">
+	<div id="copyright">
 		Copyright © 2025 <a href='https://zongxingci.github.io/'>zongxingci.github.io</a> 2025-2028
-	</div> -->
+	</div>
 </div>
 <script type="text/javascript">
 	var offsetX = $("#loveHeart").width() / 2;
