--- a/index.html
+++ b/index.html
@@ -26,12 +26,16 @@
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					Hi, Kexin Yao, we have known each other
+					<!-- Hi, Kexin Yao, we have known each other -->
+					 大丈夫生于天地之间，岂能郁郁久居人世？
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
-					I beg more chances to know you <br/>
-					<div class="signature"> Sincerely, Xingci Zong </div>
+					<!-- I beg more chances to know you  -->
+					<br/>
+					<div class="signature"> 
+						<!-- Sincerely, Xingci Zong  -->
+					</div>
 				</div>
 			</div>
 		</div>
