--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 					<!-- I beg more chances to know you  -->
 					<br/>
 					<div class="signature"> 
+						功业未就，何以家为？
 						<!-- Sincerely, Xingci Zong  -->
 					</div>
 				</div>
