--- a/index.html
+++ b/index.html
@@ -83,14 +83,13 @@
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					你好，梁丹女士！
+					你好，梁丹女士！很高兴认识你！
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
 					<!-- I beg more chances to know you  -->
 					<br/>
-					<div class="signature"> 
-						很高兴认识你，希望我们能够成为好朋友！
+					<div class="signature">
 					Sincerely, Xingci Zong 
 					</div>
 				</div>
@@ -106,7 +105,7 @@
 	var offsetY = $("#loveHeart").height() / 2 - 55;
 	var together = new Date();
 	// 此处月份介于 0 ~ 11 之间。用本地时间表示，如 8 月要用 7 表示。
-	together.setFullYear(2025, 4, 31);
+	together.setFullYear(2025, 12, 5);
 	together.setHours(15);
 	together.setMinutes(0);
 	together.setSeconds(0);
