--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         	};<br/>
 			<span class="comments">// 我性格上的缺点是有点犟和偏执。但是我真的听人劝。人常言，性格是很难改变的，这一点确实如此，但是汲取别人正确的观点，走出自己的舒适区，我认为很重要。</span><br/>
 			<span class="comments">// 我虽然是一个理科生，但是我小的时候喜欢看文学书，侦探类的书，红楼梦和福尔摩斯都陪我消磨了很长的童年时光，但小镇学理才是一个小镇做题家的出路，而且我数学确实还行。</span><br/>
-			<span class="comments">// 致Kexin姑娘</span><br/>
+			<span class="comments">// 致梁丹姑娘</span><br/>
 				try {<br/>
 					Girl kexin = i.getCrush();<br/>
 					<span class="comments">/* </span><br/>
