--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
 			<span class="comments">// 我虽然是一个理科生，但是我小的时候喜欢看文学书，侦探类的书，红楼梦和福尔摩斯都陪我消磨了很长的童年时光，但小镇学理才是一个小镇做题家的出路，而且我数学确实还行。</span><br/>
 			<span class="comments">// 致梁丹姑娘</span><br/>
 				try {<br/>
-					Girl kexin = i.getCrush();<br/>
+					Girl liangdan = i.getCrush();<br/>
 					<span class="comments">/* </span><br/>
 					<span class="comments"> * 你不是我代码中的偶然异常，</span><br/>
 					<span class="comments"> * 而是我人生算法中，</span><br/>
 					<span class="comments"> * 那个期待已久的最优解。</span><br/>
 					<span class="comments"> * </span><br/>
-					<span class="comments"> * 若说技术是我们的共同语言，</span><br/>
-					<span class="comments"> * 那么真诚就是我最好的编译器。</span><br/>
+					<!-- <span class="comments"> * 若说技术是我们的共同语言，</span><br/> -->
+					<span class="comments"> * 真诚就是我最好的编译器。</span><br/>
 					<!-- <span class="comments"> * 年纪越大懂得越多么？年纪越大越正确么？</span><br/>
 					<span class="comments"> * 我认为并非如此，知世故而不世故才是好的。</span><br/> -->
 					<span class="comments"> * 保持一颗初心，积极看待世界。</span><br/>
@@ -59,12 +59,12 @@
 						i.say(<span class="string">"请给我一个了解你的pull request，"</span> +<br/>
 							<span class="string">"我会用一生的commit来回应。"</span>);<br/>
 					}<br/>
-					<br/>
-					<span class="comments">// 感情经历 (我不是一个滥情的家伙)</span><br/>
+					<!-- <br/> -->
+					<!-- <span class="comments">// 感情经历 (我不是一个滥情的家伙)</span><br/>
 					i.relationshipHistory = Vector(<br/>
 						Relationship(<span class="string">"初恋"</span>, _),<br/>
 						Relationship(<span class="string">"前任"</span>, _)<br/>
-					).take(2);<br/>
+					).take(2);<br/> -->
 					<!-- <br/> -->
 					<!-- <span class="comments">// 郑重声明</span><br/>
 					i.age.assertThat(age => age < 30 && age > 25);<br/>
