--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<span class="comments">// 我虽然是一个理科生，但是我小的时候喜欢看文学书，侦探类的书，红楼梦和福尔摩斯都陪我消磨了很长的童年时光，但小镇学理才是一个小镇做题家的出路，而且我数学确实还行。</span><br/>
 			<span class="comments">// 致梁丹姑娘</span><br/>
 				try {<br/>
-					Girl liangdan = i.getCrush();<br/>
+					Girl xxx = i.getCrush();<br/>
 					<span class="comments">/* </span><br/>
 					<span class="comments"> * 你不是我代码中的偶然异常，</span><br/>
 					<span class="comments"> * 而是我人生算法中，</span><br/>
@@ -55,7 +55,7 @@
 					<span class="comments"> * 保持一颗初心，积极看待世界。</span><br/>
 					<span class="comments"> */</span><br/>
 					<br/>
-					if (!liangdan.requires(<span class="string">"高颜值"</span>)) {<br/>
+					if (!xxx.requires(<span class="string">"高颜值"</span>)) {<br/>
 						i.say(<span class="string">"请给我一个了解你的pull request，"</span> +<br/>
 							<span class="string">"我会用一生的commit来回应。"</span>);<br/>
 					}<br/>
@@ -83,7 +83,7 @@
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					你好，梁丹女士！很高兴认识你！
+					<!-- 你好，梁丹女士！很高兴认识你！ -->
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
